Added more data

--- a/public/index.html
+++ b/public/index.html
@@ -292,10 +292,9 @@
     </h1>
 
     
-    <div class="hero-lead"><p><span style="color:#002f5eff">
-<strong>Join</strong></p>
+    <div class="hero-lead"><p><span style="color:#002f5eff"></p>
 
-<p>Bla bla bla</p>
+<p>Bla bla bla. Bla bla. Yada yada.</p>
 
 <p></span>
 <!-- span style="text-shadow: none;"><a class="github-button" href="https://github.com/gcushen/hugo-academic" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star this on GitHub">Star</a><script async defer src="https://buttons.github.io/buttons.js"></script></span --></p>
