--- a/public/overview/index.html
+++ b/public/overview/index.html
@@ -361,34 +361,165 @@
 
 
 
-<h4>Declared data</h4>
+<h4 style="margin: 1em 4em;">Declared data</h4>
 
-<table style="width:90%">
-
+<table style="width:90%; margin:1em auto;">
+  <thead>
+    <tr>
+      <th>Identifier</th>
+      <th>Name of sharer</th>
+      <th>Posting date</th>
+      <th>Data label</th>
+      <th>Data description</th>
+    </tr>
+  </thead>
+  <tbody>
+  
    <tr>
     <td>rsmqfp9gt</td>
     <td>Gjalt-Jorn Peters</td>
     <td>2019-07-12</td>
-    <td>This is a testing dataset</td>
-    <td>This is a testing description</td>
+    <td>Party Panel: determinants of ecstasy use-related behaviors</td>
+    <td>This is a dataset from 2005-2006 with ~ 7000 participants and social cognitive determinants of several ecstasy use-related behaviors. Bla bla. Lorum Ipsum etc.</td>
   </tr>
-
+  
    <tr>
     <td>rsmqfpj9w</td>
-    <td>Another name</td>
+    <td>Sarah Schiavone</td>
     <td>2019-07-12</td>
-    <td>This is a testing dataset</td>
+    <td>This is a label for a testing dataset</td>
     <td>This is a testing description</td>
   </tr>
-
+  
    <tr>
     <td>rsmqfpr9b</td>
     <td>James Green</td>
     <td>2019-07-12</td>
-    <td>This is a testing dataset</td>
+    <td>This is also some non-existent testing dataset</td>
     <td>This is a testing description</td>
   </tr>
-
+  
+   <tr>
+    <td>rsnsjh336</td>
+    <td>Ilse Pit</td>
+    <td>2019-07-12</td>
+    <td>This is also some non-existent testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjn4xf</td>
+    <td>Elena Sixtus</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjndz0</td>
+    <td>Florian Wanders</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjnmb4</td>
+    <td>Cillian McHugh</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjnt8k</td>
+    <td>Conor Smithson</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjp1pb</td>
+    <td>Ellie Hassan</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjp81k</td>
+    <td>Olivia Kirtley</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnsjph7w</td>
+    <td>Adriano Winterton</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw59j8j</td>
+    <td>Antonio Schettino</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw5jr4z</td>
+    <td>Zoe Walter</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw5xp2r</td>
+    <td>Nik Steffens</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw67319</td>
+    <td>Michele Nuijten</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw6lc1x</td>
+    <td>Gustav Nilsonne</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnw7mdt7</td>
+    <td>Cooper Smout</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+   <tr>
+    <td>rsnwf1fm4</td>
+    <td>Matan Mazor</td>
+    <td>2019-07-12</td>
+    <td>This is a label for a testing dataset</td>
+    <td>This is a testing description</td>
+  </tr>
+  
+  </tbody>
 </table>
 
 <div class="container">
